[package]
name = "rust_kasa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
serde = {version = "1.0.196", features = ["derive"] }
anyhow = "1.0.86"
#crossterm = "0.28.1"
#ratatui = "0.29.0"
